frontend/src/components/gallery/gallery.scss
$font-main: "IBM Plex Sans", sans-serif;
$font-text: "Inika", serif;

.gallery-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  
  &.dark-mode {
    background-color: rgb(14, 13, 13);
    color: white;
  }
  
  @media (max-width: 768px) {
    height: 100vh;
  }


  // Pagination styles within the .gallery-section
  .pagination {
    margin-top: 10px;
    display: flex;
    justify-content: center;
    z-index: 2;

    @media (max-width: 600px) {
      margin-top: 0px;
      margin-bottom: 10%;
    }

    .pagination-list {
      list-style-type: none;
      padding: 0;
      display: flex;
      gap: 5px;

      .pagination-item {
        button {
          background-color: #ffffff;
          border: 1px solid #ccc;
          color: #333;
          padding: 8px 12px;
          font-size: 14px;
          cursor: pointer;
          transition: background-color 0.3s, color 0.3s, border-color 0.3s;

          &:hover {
            background-color: #f0f0f0;
          }

          &.active {
            background-color: #007bff;
            color: #ffffff;
            border-color: #007bff;

            &:hover {
              background-color: #0056b3;
            }
          }
        }
      }
    }
  }

  .tabs {
    display: flex;
    gap: 10px;
    .tab-button {
      border: none;
      background: none;
      font-size: 1.5rem;
      margin-block: 1em;
      padding-inline: 10px;
      border-right: 2px solid black;

      &.dark-mode {
        color: white;
        border-right: 2px solid white;
      }

      &:hover {
        text-decoration: overline;
        color: gray;
        cursor: pointer;
      }
      &.selected {
        font-weight: bold;
        text-decoration:overline;
      }

      @media (max-width: 1280px) {
        font-size: 1.3rem;
      }

      @media (max-width: 800px) {
        font-size: 1.2rem;
      }

      @media (max-width: 600px) {
        font-size: 1rem;
        border-right: none;
        border-bottom: 2px solid black;
      }
    }
    @media (max-width: 600px) {
      flex-direction: column;
      align-items: flex-start;
      margin-top: 20%;
    }
  }

  .gallery {
    --s: 20vw; /* control the size */
    --g: 10px; /* control the gap */
    --f: 1.5; /* control the scale factor */

    display: grid;
    gap: var(--g);
    width: calc(3 * var(--s) + 2 * var(--g));
    aspect-ratio: 1;
    grid-template-columns: repeat(4, 1fr);

    @media (max-width: 1280px) {
      --s: 18vw;
      grid-template-columns: repeat(3, 1fr);
      width: calc(3 * var(--s) + 2 * var(--g));
    }

    @media (max-width: 800px) {
      --s: 30vw; 
      grid-template-columns: repeat(2, 1fr);
      width: calc(2 * var(--s) + var(--g));
    }

    @media (max-width: 600px) {
      --s: 40vw; 
      grid-template-columns: 1fr;
      width: calc(var(--s));
      height: 450px;
    }
  }

  .gallery > .img-container > img {
    width: 0;
    height: 0;
    min-height: 100%;
    min-width: 100%;
    object-fit: cover;
    cursor: pointer;
    transition: 0.35s linear;
  }

  .gallery .img-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    overflow: hidden;

    &.placeholder {
      background-color: #e0e0e0;
      opacity: 0.5;
      transition: opacity 1s ease-in-out;
      .placeholder-content {
        width: 100%;
        height: 100%;
        background-color: #ccc;
      }
    }

    .text-container {
      font-family: $font-text;
      opacity: 0;
      transition: opacity 0s;
      h3 {
        position: absolute;
        top: -3%;
        left: 50%;
        width: 50%;
        transform: translate(-50%, -50%);
        background-color: rgba(232, 241, 235, 0.5);
        backdrop-filter: blur(10px);
        padding: 10px 20px;
        font-size: 1.5rem;
        color: #333;
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
        z-index: 5;
        text-align: center;
        text-transform: uppercase;

        @media (max-width: 1280px) {
          font-size: 1.3rem;
        }

        @media (max-width: 800px) {
          font-size: 1.2rem;
        }

        // @media (max-width: 600px) {
        //   font-size: 1rem;
        // }
      }
      
      p {
        position: absolute;
        top: 90%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 80%;
        background-color: rgba(224, 231, 227, 0.5);
        backdrop-filter: blur(10px);
        border-radius: 10px;
        padding: 20px;
        font-size: 1rem;
        color: #111111; /* Darker text for better contrast */
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow */
        z-index: 5;
        text-align: center; /* Center text inside the element */
      }
      @media (max-width: 1280px) {
        font-size: 0.9rem;
      }

      @media (max-width: 800px) {
        font-size: 0.8rem;
      }

      @media (max-width: 600px) {
        font-size: 0.7rem;
      }
      
      &-active {
        opacity: 1;
        transition: opacity 0.5s ease-in 0.2s;
      }
    
    }
    img:hover {
      width: calc(var(--s) * var(--f));
      height: calc(var(--s) * var(--f));
    }
  }
  @media (max-width: 600px) {
    flex-direction: column;
    align-items: center;
    position: relative;

    .tabs {
      flex-direction: column;
      order: 1;
      width: 100%;
      position: absolute;
      top: 20%;
    }

    .gallery {
      order: 2;
      margin-left: 35%;
    }
  }
}
// body {
//   margin: 0;
//   min-height: 100vh;
//   display: grid;
//   place-content: center;
//   background: #ffffff;
// }

